<resources>
    <string name="app_name">Gifty</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="click_to_sign_up">Click here to sign up for Gifty!</string>
    <string name="or">Or</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="error_empty_password">Enter password!</string>
    <string name="error_empty_email">Enter email!</string>
    <string name="error_short_password">Password has to be at least 6 characters long!</string>
    <string name="error_wrong_email">Wrong email!</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_success">A password was successfully reset, please check your email.</string>
    <string name="name">Name</string>
    <string name="error_empty_fullname">Enter your full name</string>
    <string name="snackbar_enter_name">You should enter your name!</string>
    <string name="sign_out">Sign Out</string>
    <string name="dialog_title_name">Edit name</string>
    <string name="dialog_title_email">Edit email</string>
    <string name="error_loading_error">Data loading error</string>
    <string name="friends">Friends</string>
    <string name="no_friends">You don\'t have friends yet. Find some!</string>
    <string name="no_users">Couldn\'t find any user matching your query.</string>
    <string name="title_profile">Profile</string>
    <string name="title_friends">Friends</string>
    <string name="title_groups">Groups</string>
    <string name="title_gift_list">Gift list</string>
    <string name="image_content_button_action">ActionButton</string>
    <string name="add_friend_to_group">Add friend to group</string>
    <string name="error_email_occupied">Email is occupied!</string>
    <string name="error_empty_group">Empty group name!</string>
    <string name="error_group_exists">Group with such name already exists!</string>
    <string name="create_group">Create group</string>
    <string name="error_empty_gift">Enter gift name!</string>
    <string name="error_gift_exists">Gift with such name already exists!</string>
    <string name="add_friends">Add friends</string>
    <string name="add_groups">Add groups</string>
    <string name="create_gift">Create gift</string>
    <string name="friends_gift_list">\'s gift list</string>
</resources>
